--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "todo16v3",
+  "homepage": "https://dariagavrilenko.github.io/todoList",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -31,6 +32,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
